# Robotics_book_chatbot

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_MDX.txt  RATE_LIMIT_FIX.md  README.md  RUN_PROJECT.md  package-lock.json  playwright.config.ts
backend/: .dockerignore  .env.example  API.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  check_qdrant_data.py  cleanup_old_data.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  simple_test.py  test_real_query.py  test_services.py
backend/app/api/schemas/: chat_request.py
backend/app/models/: chat.py
backend/app/services/utils/: search_boosting.py  test_search_boosting.py  validation.py
backend/scripts/: __init__.py  chunk_chapters.py  generate_embeddings.py  insert_qdrant.py  process_all.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/v1/: __init__.py
backend/src/middleware/: __init__.py  rate_limiter.py
backend/src/models/: __init__.py  chat.py  chunk.py
backend/src/services/: __init__.py  embedding_service.py  gemini_service.py  health_service.py  markdown_parser.py  orchestrator.py  qdrant_service.py  rag_service.py  rate_limiter.py  verification_service.py
backend/src/services/__tests__/: test_chapter_filtering_integration.py
backend/src/services/utils/: __init__.py  chapter_filter.py  (+3 more)
backend/tests/: conftest.py  test_chat_with_selected_text.py  test_embedding_service.py  test_integration.py  test_markdown_parser.py  test_orchestrator.py  test_qdrant_service.py  test_verification_service.py
backend/tests/integration/: __init__.py
(+275 files in other folders)
